--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,8 +13,29 @@
 
 /*Global*/
 
+p,
+h2,
+h3 {
+	margin: 0;
+}
+
+.page {
+	height: 100%;
+}
+
+.wrapper {
+	width: 1200px;
+
+	display: grid;
+	grid-template-rows: min-content 1fr min-content;
+	align-content: start;
+	margin: 0 auto;
+
+	box-shadow: 0px 5px 15px rgba(0, 1, 1, 0.2);
+}
+
 .page-body {
-	min-width: 960px;
+	min-width: 1200px;
 	margin: 0;
 	padding: 0;
 	font-family: "PT Sans", Arial, sans-serif;
@@ -22,6 +43,7 @@
 	line-height: 26px;
 	color: var(--basic-dark);
 	text-transform: uppercase;
+	min-height: 100%;
 	background-color: var(--basic-lightgrey);
 }
 
@@ -34,14 +56,21 @@
 
 /*Main navigation*/
 
+.main-navigation {
+	background-color: var(--basic-white);
+	display: grid;
+	grid-template-columns: min-content 1fr;
+}
+
 .site-navigation a {
 	text-decoration: none;
 	color: var(--basic-black);
 }
 
 .site-navigation {
+	margin: 0;
+	padding: 0;
 	list-style: none;
-	background-color: var(--basic-white);
 }
 
 .site-navigation a:hover {
@@ -54,20 +83,31 @@
 
 /*Main*/
 
+.container h1 {
+	display: none;
+}
+
 .welcome {
+	height: 509px;
 	background-image: url(../images/background.jpg);
 	background-position: top center;
 	background-repeat: no-repeat;
 }
 
-.welcome img {
-    margin: auto;
+.welcome {
+	margin: 0;
+    text-align: center;
+    vertical-align: bottom;
 }
 
 .text {
+	box-sizing: border-box;
+	height: 216px;
 	vertical-align: bottom;
 	text-align: center;
 	background-color: var(--basic-white);
+	padding-top: 42.5px;
+	padding-bottom: 51px;
 }
 
 .text h2{
@@ -75,15 +115,20 @@
 	line-height: 26px;
 	font-weight: 700;
 	margin: 0;
-	margin-top: 42.5;
 }
 
 .text p{
+	margin: 0;
 	vertical-align: bottom;
 	color: var(--basic-dark);
+	margin-top: 56px;
 }
 
 /*features*/
+
+.features h2 {
+	display: none;
+}
 
 .features {
 	line-height: 21px;
@@ -91,43 +136,108 @@
 }
 
 .features-list {
+	display: grid;
+	grid-template-columns: 400px 400px 400px;
+	margin: 0;
 	padding: 0;
 	list-style: none;
+	background-color: var(--basic-white);
 }
 
-.features-list-extra {
-	background-color: var(--basic-white);
-	list-style: none;
+.pov {
+	grid-column-start: 2;
+	grid-column-end: -1;
+}
+
+.pov1 {
+	grid-column-start: 1;
+	grid-column-end: 3;
 }
 
 .features-list h3 {
 	font-size: 21px;
 	line-height: 21px;
 	font-weight: 700;
-	color: var(--basic-black);
+	text-align: center;
 }
 
-.features-itemImg {
+.features-text {
+	box-sizing: border-box;
+	height: 256px;
+	padding-top: 47px;
+	padding-bottom: 54px;
 	background-color: var(--basic-blue);
 	color: var(--basic-white);
 }
 
-.features-itemImg h3 {
-	color: var(--basic-white);
+.features-text p {
+	text-align: center;
 }
 
+
+.secondary-text {
+	box-sizing: border-box;
+	height: 256px;
+	padding-top: 47px;
+	padding-bottom: 54px;
+	background-color: var(--basic-lightgrey);
+}
+
+.secondary-text p {
+	text-align: center;
+}
+
+.home {
+	margin-top: 5px;
+}
+
+.burger {
+	margin-top: 6px;
+}
+
+.extra-text h3 {
+	margin-top: 28px;
+	margin-bottom: 25px;
+}
+
+.features-item {
+	height: 256px;
+}
+
+.features-item-extra {
+	box-sizing: border-box;
+	height: 330px;
+	text-align: center;
+	padding-bottom: 82px;
+	padding-top: 55px;
+}
+
+.number {
+	margin-top: 25px;
+	margin-bottom: 23px;
+}
 /*Searching hotel*/
 
 .searching-hotel {
+	height: 291px;
 	background-color: var(--basic-white);
 	line-height: 24px;
 }
 
-.searching-hotel h3 {
+.searching-hotel-main {
+	width: 568px;
+	height: 233px;
+	margin: 0 auto;
+	text-align: center;
+	padding-top: 58px;
+}
+
+.searching-hotel h2 {
 	font-size: 30px;
 	font-weight: 700;
 	line-height: 24px;
 	color: var(--basic-black);
+	margin-bottom: 41px;
 }
 
 .searching-hotel-button {
@@ -136,6 +246,7 @@
 	font-size: 21px;
 	font-weight: 700;
 	border-style: none;
+	margin-top: 53px;
 }
 
 .searching-hotel-button:hover {
@@ -151,7 +262,11 @@
 /*footer*/
 
 .main-footer {
+	display: grid;
+	grid-template-columns: 1fr min-content 1fr;
 	background-color: var(--basic-white);
+	padding-right: 136px;
+	padding-left: 136px;
 }
 
 .info {
@@ -166,6 +281,8 @@
 }
 
 .footer-social-list {
+	margin: 0;
+	padding: 0;
 	list-style: none;
 }
 
@@ -194,6 +311,7 @@
 }
 
 .footer-copyright {
+	justify-self: end;
 	font-size: 14px;
 	line-height: 26px;
 }
@@ -201,6 +319,8 @@
 /*Popup*/
 
 .modal {
+	width: 568px;
+	height: 395px;
 	background-color: var(--basic-white);
 	color: var(--basic-black);
 	font-weight: 700;
