--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,11 @@
 
 /*Global*/
 
-p,
+/*p,
 h2,
 h3 {
 	margin: 0;
-}
+}*/
 
 .page {
 	height: 100%;
@@ -51,7 +51,8 @@ h3 {
 
 .main-header {
 	font-weight: 700;
-
+	height: 56px;
+	background-color: var(--basic-white);
 }
 
 /*Main navigation*/
@@ -60,6 +61,12 @@ h3 {
 	background-color: var(--basic-white);
 	display: grid;
 	grid-template-columns: min-content 1fr;
+	position: relative;
+}
+
+.main-header-logo {
+	left: 531px;
+	position: absolute;
 }
 
 .site-navigation a {
@@ -68,9 +75,33 @@ h3 {
 }
 
 .site-navigation {
+	display: grid;
+	grid-template-columns: 200px 200px 200px 200px 200px 200px;
 	margin: 0;
 	padding: 0;
 	list-style: none;
+}
+
+.menu-item-info {
+	grid-column-start: 1;
+	grid-column-end: 2;
+}
+
+.menu-item-photo {
+	grid-column-start: 2;
+	grid-column-end: 3;
+	justify-self: end;
+}
+
+.menu-item-map {
+	grid-column-start: 5;
+	grid-column-end: 6;
+	justify-self: start;
+}
+
+.menu-item-catalog {
+	grid-column-start: 6;
+	grid-column-end: 7;
 }
 
 .site-navigation a:hover {
@@ -129,6 +160,11 @@ h3 {
 .features h2 {
 	display: none;
 }
+
+.features h3 {
+	margin: 0;
+}
+
 
 .features {
 	line-height: 21px;
