--- a/css/style.css
+++ b/css/style.css
@@ -131,12 +131,12 @@ h3 {
 	background-position: top center;
 	background-repeat: no-repeat;
 	margin: 0;
+	padding-top: 76px;
 }
 
 .welcome img {
 	width: 456.65px;
 	height: 350.88px;
-	margin-top: 76px;
 }
 
 .text {
