--- a/css/style.css
+++ b/css/style.css
@@ -491,14 +491,14 @@ h3 {
 	width: 455px;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	/*justify-content: space-between;*/
 	align-items: baseline;
 }
 
 .modal-date {
 	box-sizing: border-box;
 	display: block;
-	width: 325px;
+	width: 340px;
 	height: 38px;
 	padding-top: 6px;
 	padding-bottom: 6px;
@@ -534,6 +534,11 @@ h3 {
 
 .searching-form label {
 	height: 26px;
+	margin-right: 17px;
+}
+
+.searching-form label:nth-of-type(2) {
+	margin-right: 13px;
 }
 
 .searching-form input {
@@ -546,9 +551,13 @@ h3 {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	/*justify-content: space-between;*/
 	align-items: baseline;
 	width: 455px;
+}
+
+.people-amount label {
+	margin-right: 29px;
 }
 
 .amount {
@@ -560,6 +569,14 @@ h3 {
 	background-color: var(--basic-light);
 }
 
+.amount:first-of-type {
+	margin-right: 33px;
+}
+
+.amount:last-of-type {
+	margin-left: 20px;
+}
+
 .amount input {
 	box-sizing: border-box;
 	font-weight: 700;
@@ -568,9 +585,6 @@ h3 {
 	padding: 6px 14px;
 }
 
-.people-amount label {
-	margin-right: 40px;
-}
 
 .amount-button {
 	position: relative;
@@ -590,8 +604,8 @@ h3 {
 	width: 12px;
 	height: 3px;
 	background-color: var(--basic-grey);
-	top: 17px;
-	right: 7px;
+	top: 18px;
+	right: 14px;
 }
 
 .amount-button-plus::before,
@@ -626,7 +640,7 @@ h3 {
 .searching-modal-button {
 	box-sizing: border-box;
 	display: block;
-	padding: 16px 182px;
+	padding: 19px 196px;
 	margin-top: 54px;
 	font-size: 21px;
 	font-weight: 700;
