--- a/css/style.css
+++ b/css/style.css
@@ -1015,12 +1015,14 @@ input[type="checkbox"] {
 	text-decoration: none;
 	color: var(--basic-white);
 	margin-right: 1px;
+	font-weight: 700;
 }
 
 .book {
 	padding: 6px 20px;
 	background-color: var(--basic-brown);
 	text-decoration: none;
+	font-weight: 700;
 	color: var(--basic-white);
 }
 
