--- a/css/style.css
+++ b/css/style.css
@@ -496,6 +496,8 @@ h3 {
 
 .searching-form {
 	width: 455px;
+	margin: 0;
+	padding: 0;
 	display: flex;
 	flex-wrap: wrap;
 	/*justify-content: space-between;*/
@@ -505,12 +507,12 @@ h3 {
 .modal-date {
 	box-sizing: border-box;
 	display: block;
-	width: 340px;
+	width: 342px;
 	height: 38px;
 	padding-top: 6px;
 	padding-bottom: 6px;
 	padding-left: 13px;
-	margin-bottom: 29px;
+	margin-bottom: 28px;
 }
 
 .modal-date::placeholder {
@@ -519,12 +521,16 @@ h3 {
 	font-weight: 700;
 }
 
+.modal-date-departure {
+	margin-bottom: 30px;
+}
+
 .calendar-arrival {
 	position: absolute;
 	width: 21px;
 	height: 23px;
 	top: 62px;
-	left: 477px;
+	left: 483px;
 	border-style: none;
 	padding: 0;
 	margin: 0;
@@ -535,7 +541,7 @@ h3 {
 	width: 21px;
 	height: 23px;
 	top: 129px;
-	left: 477px;
+	left: 483px;
 	border-style: none;
 	padding: 0;
 	margin: 0;
@@ -553,11 +559,11 @@ h3 {
 
 .searching-form label {
 	height: 26px;
-	margin-right: 17px;
+	margin-right: 26px;
 }
 
 .searching-form label:nth-of-type(2) {
-	margin-right: 13px;
+	margin-right: 22px;
 }
 
 .searching-form input {
@@ -576,25 +582,25 @@ h3 {
 }
 
 .people-amount label {
-	margin-right: 29px;
+	margin-right: 41px;
 }
 
 .amount {
 	display: flex;
 	flex-wrap: wrap;
 	box-sizing: border-box;
-	width: 119px;
+	width: 114px;
 	height: 38px;
 	background-color: var(--basic-light);
 }
 
 .amount:first-of-type {
-	margin-right: 33px;
+	margin-right: 53px;
 }
 
-.amount:last-of-type {
-	margin-left: 20px;
-}
+/*.amount:last-of-type {
+	margin-left: 9px;
+}*/
 
 .amount input {
 	box-sizing: border-box;
@@ -659,7 +665,7 @@ h3 {
 .searching-modal-button {
 	box-sizing: border-box;
 	display: block;
-	padding: 19px 196px;
+	padding: 17px 196px;
 	margin-top: 54px;
 	font-size: 21px;
 	font-weight: 700;
@@ -814,10 +820,20 @@ input[type="checkbox"] {
 	border-right: none;
 }
 
+.min-price input::placeholder {
+	text-transform: uppercase;
+	color: var(--basic-white);
+}
+
 .max-price input {
 	position: relative;
 	left: -15px;
 	border-left: none;
+}
+
+.max-price input::placeholder {
+	text-transform: uppercase;
+	color: var(--basic-white);
 }
 
 .filter-item legend {
@@ -863,7 +879,7 @@ input[type="checkbox"] {
 .show {
 	display: block;
 	font-size: 16px;
-	background-color: rgba(0, 125, 215, 0.1);
+	background-color: rgba(0, 125, 215, 0);
 	border: 2px solid var(--basic-white);
 	color: var(--basic-white);
 	margin-left: 85px;
