--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ h3 {
 	position: absolute;
 	width: 1200px;
 	height: 57px;
-	background-image: url(../images/Shape.svg);
+	background-image: url(../images/shape.svg);
 	top: 453px;
 }
 
