--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
 	--basic-grey: #888888;
 	--basic-lightgrey: #eeeeee;
 	--basic-light: #F2F2F2;
+	--basic-lightblack: #EBEBEB;
+	--basic-brightgrey: #E5E5E5;
 }
 
 /*Global*/
@@ -128,7 +130,8 @@ h3 {
 }
 
 .site-navigation a:focus {
-	color: var(--basic-grey);
+	color: var(--basic-black);
+	opacity: 0.3;
 }
 
 /*Main*/
@@ -582,6 +585,15 @@ h3 {
 	border-style: none;
 }
 
+.searching-form input:hover {
+	background-color: var(--basic-lightblack);
+}
+
+.searching-form input:focus {
+	background-color: var(--basic-white);
+	outline: var(--basic-brightgrey) solid 2px;
+}
+
 .people-amount {
 	display: flex;
 	flex-direction: row;
@@ -731,6 +743,14 @@ h3 {
 	margin-bottom: 24px;
 }
  
+.filter-infastructure-checkbox[disabled] + label::before {
+	background-image: url(../images/checkbox-off-dis.svg);
+}
+
+.filter-infastructure-checkbox[disabled]:checked + label::before {
+	background-image: url(../images/checkbox-on-dis.svg);
+}
+
 .filter-infastructure {
 	margin: 0;
 	padding: 0;
@@ -882,6 +902,11 @@ input[type="checkbox"] {
 	cursor: pointer;
 }
 
+.toggle:hover {
+	transition: border 0.5s easy;
+	border: 10px solid var(--basic-white);
+}
+
 .toggle-max {
 	left: 215px;
 }
@@ -943,6 +968,7 @@ input[type="checkbox"] {
 
 .sorting-link:focus {
 	color: var(--basic-black);
+	border-style: none;
 }
 
 .value-sorting {
@@ -957,6 +983,16 @@ input[type="checkbox"] {
 .decInc-links {
 	margin-top: 4px;
 	margin-left: 6px;
+}
+
+.decrease-sorting:hover path,
+.increase-sorting:hover path {
+	fill: var(--basic-black);
+}
+
+.decrease-sorting:focus path,
+.increase-sorting:focus path {
+	fill: var(--basic-blue);
 }
 
 /*Hotels*/
@@ -1037,6 +1073,14 @@ input[type="checkbox"] {
 	text-decoration: none;
 }
 
+.hotel-heading a:hover {
+	color: var(--basic-blue);
+}
+
+.hotel-heading a:focus {
+	color: rgba(0, 0, 0, 0.3);
+}
+
 .more-detailed {
 	padding: 6px 17px;
 	background-color: var(--basic-blue);
@@ -1059,7 +1103,8 @@ input[type="checkbox"] {
 }
 
 .more-detailed:focus {
-	background-color: #5496BD;
+	background-color: #669EC0;
+	color: rgba(255, 255, 255, 0.3);
 }
 
 .book:hover {
@@ -1067,8 +1112,8 @@ input[type="checkbox"] {
 }
 
 .book:focus {
-	background-color: #503E33;
-	color: var(--basic-grey);	
+	background-color: #604E43;
+	color: rgba(255, 255, 255, 0.3);	
 }
 
 .rating {
