--- a/css/style.css
+++ b/css/style.css
@@ -514,7 +514,7 @@ h3 {
 }
 
 .searching-form {
-	width: 455px;
+	width: auto;
 	margin: 0;
 	padding: 0;
 	display: flex;
@@ -582,7 +582,7 @@ h3 {
 }
 
 .searching-form label:nth-of-type(2) {
-	margin-right: 22px;
+	margin-right: 24px;
 }
 
 .searching-form input {
