--- a/css/style.css
+++ b/css/style.css
@@ -513,6 +513,10 @@ h3 {
 	z-index: 0;
 }
 
+.modal-error {
+	animation: shake 0.6s;
+}
+
 .searching-form {
 	width: auto;
 	margin: 0;
@@ -1163,3 +1167,26 @@ input[type="checkbox"] {
 	left: 76px;
 }
 
+/*Animations*/
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
