--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ h3 {
 	position: absolute;
 	width: 1200px;
 	height: 57px;
-	background-image: url(../images/shape.svg);
+	background-image: url(../images/pattern.svg);
 	top: 453px;
 }
 
